tests/compile-fail/Rule_2_2.rs
#[deny(dead_code)]

const DEAD_CODE: i32 = 0;

fn main() {}
